appId: "com.recipedia"
---

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipePreparation::AddButton::RoundButton"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to preparation add button"

- waitForAnimationToEnd

- tapOn:
    id: "RecipePreparation::AddButton::RoundButton"
    label: "Press new preparation step button"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::0::Content"
    direction: DOWN
    speed: 20
    centerElement: true
    label: "Scroll to preparation step"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::0::Title"
    direction: UP
    speed: 20
    label: "Scroll up in case the preparation title is not visible"

- waitForAnimationToEnd

- tapOn:
    id: "RecipePreparation::EditableStep::0::TextInputTitle::CustomTextInput"
    label: "Press preparation step title"

- runFlow:
    file: "../../../../waitForKeyboard.yaml"
    label: "Wait for keyboard to appear"
- inputText:
    text: "Step title"
    label: "Write the preparation step title in the input text"

- tapOn:
    id: "RecipePreparation::EditableStep::0::Title"
    label: "Tap on preparation title to close the keyboard"

- runFlow:
    file: "../../../../waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to dismiss"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::0::TextInputContent::CustomTextInput"
    direction: DOWN
    speed: 20
    centerElement: true
    label: "Scroll to preparation content"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::0::Content"
    direction: UP
    speed: 20
    label: "Scroll up in case the preparation content is not visible"

- waitForAnimationToEnd

- tapOn:
    id: "RecipePreparation::EditableStep::0::TextInputContent::CustomTextInput"
    label: "Press preparation step paragraph"

- runFlow:
    file: "../../../../waitForKeyboard.yaml"
    label: "Wait for keyboard to appear"


- inputText:
    text: "Step paragraph"
    label: "Write the preparation step paragraph in the input text"

- tapOn:
    id: "RecipePreparation::EditableStep::0::Content"
    label: "Tap on preparation content to close the keyboard"

- runFlow:
    file: "../../../../waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to dismiss"
