appId: "com.recipedia"
---

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeDescription::CustomTextInput"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to description text input"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeDescription::CustomTextInput"
    label: "Tap on Description's TextInput"

- inputText:
    text: "Description"
    label: "Write the description in the input text"

- tapOn:
    id: "RecipeDescription::Text"
    label: "Tap on title to close the keyboard"
