appId: "com.recipedia"
---

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeTags::RoundButton"
    direction: DOWN
    speed: 20
    centerElement: true
    label: "Scroll to tags's adding button"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeTags::RoundButton"
    label: "Add a new tag"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeTags::List::0::CustomTextInput"
    direction: UP
    speed: 20
    centerElement: true
    label: "Scroll to ensure first tag's text input is visible"

- waitForAnimationToEnd

- assertVisible:
    id: "RecipeTags::List::0::CustomTextInput"
    label: "Ensure first tag's text input is visible"

- tapOn:
    id: "RecipeTags::List::0::CustomTextInput"
    label: "Press the new tag TextInput"

- runFlow:
    file: "../../../../inputAndCommitText.yaml"
    env:
      TARGET_ID: "RecipeTags::List::0::CustomTextInput"
      VALUE: "Japanese"
      DISMISS_ID: "RecipeTags::ElementText"
    label: "Write the tag in the input text"

- runFlow:
    file: "../../../../waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to dismiss"
