appId: com.recipedia
---
- tapOn:
    text: "Pictures"
    label: "Select the pictures directory"

- longPressOn:
    id: "icon_thumb"
    label: "Stay pressed on the first icon to select it"

- runFlow:
    when:
      visible:
        id: "icon_thumb"
        index: 1
    commands:
      - tapOn:
          text: "More options"
          label: "Press on the more options menu"
      - tapOn:
          text: "Select all"
          label: "Select all pictures in the directory"

- tapOn:
    id: "action_menu_delete"
    label: "Delete the selected pictures"

- tapOn:
    text: "OK"
    label: "Confirm the deletion"
