appId: "com.recipedia"
---
- extendedWaitUntil:
    visible:
      text: "Shutter"
    timeout: 10000
    label: "Wait for the camera button to appear"

- tapOn:
    text: "Shutter"
    label: "Take the photo"

- extendedWaitUntil:
    visible:
      text: "Done"
    timeout: 10000
    label: "Wait for the done button to appear"

- tapOn:
    text: "Done"
    label: "Validate that we want this picture"

- runFlow:
    file: "validateWithoutCropping.yaml"
    label: "Validate image without cropping"
