appId: "com.recipedia"
---
- tapOn:
    id: "BottomTabs::Home"
    label: "Tap on home tab"

- runFlow:
    file: "../../../../fab/expand.yaml"
    label: "Expand FAB menu"

# FAB ID uses regex pattern because React Native Paper adds suffix on iOS
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          id: "CameraButton"
          label: "Open camera for OCR on Android"

- runFlow:
    when:
      platform: iOS
    commands:
      - addMedia:
          - "../../../../../../assets/pouletSatay/image.jpg"
      - tapOn:
          id: "GalleryButton-container-outer-layer"
          label: "Open gallery for OCR on iOS (simulator doesn't support camera)"

- runFlow:
    file: "../android/takePhoto.yaml"
    label: "Take photo (Android)"
    when:
      platform: Android
- runFlow:
    file: "../iOS/selectFromGallery.yaml"
    label: "Select most recent photo from gallery (iOS)"
    when:
      platform: iOS
