appId: "com.recipedia"
---
- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeDescription::OpenModal::RoundButton"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to description section"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeDescription::OpenModal::RoundButton"
    label: "Tap on OCR button of recipe description"

- runFlow:
    file: ../android/addMedia.yaml
    env:
      FIELD_NAME: description
    when:
      platform: Android
- runFlow:
    file: ../iOS/addMedia.yaml
    env:
      FIELD_NAME: description
    when:
      platform: iOS

- runFlow:
    file: ../android/selectMostRecentFromModal.yaml
    label: "Select description from modal for OCR"
    when:
      platform: Android
- runFlow:
    file: ../iOS/selectMostRecentFromModal.yaml
    label: "Select description from modal for OCR"
    when:
      platform: iOS

- extendedWaitUntil:
    visible:
      id: "RecipeDescription::CustomTextInput"
    timeout: 30000
    label: "Wait for description to be populated by OCR"

- runFlow:
    file: ../cleanAndResume.yaml
    label: "Delete description image from gallery and return to Recipedia"
