appId: "com.recipedia"
---
- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionEmptyState::OCRButton::RoundButton"
    direction: DOWN
    speed: 90
    centerElement: true
    label: "Scroll to nutrition section"

- waitForAnimationToEnd

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionEmptyState::OCRButton::RoundButton"
    label: "Tap on OCR button for nutrition"

- runFlow:
    file: ../android/addMedia.yaml
    env:
      FIELD_NAME: nutrition
    when:
      platform: Android
- runFlow:
    file: ../iOS/addMedia.yaml
    env:
      FIELD_NAME: nutrition
    when:
      platform: iOS

- runFlow:
    file: ../android/selectMostRecentFromModal.yaml
    label: "Select nutrition from modal for OCR"
    when:
      platform: Android
- runFlow:
    file: ../iOS/selectMostRecentFromModal.yaml
    label: "Select nutrition from modal for OCR"
    when:
      platform: iOS

- extendedWaitUntil:
    visible:
      id: "Recipe::RecipeNutrition::NutritionTable"
    timeout: 120000
    label: "Wait for nutrition values to be populated by OCR"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::EditForm::PortionWeightNumericTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to weight of a portion"

- waitForAnimationToEnd

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::EditForm::PortionWeightNumericTextInput"
    label: "Tap on weight input"

- runFlow:
    file: "../../../../waitForKeyboard.yaml"
    label: "Wait for numeric keyboard to appear"

- runFlow:
    file: "../../../../inputAndDone.yaml"
    env:
      TARGET_ID: "Recipe::RecipeNutrition::NutritionTable::EditForm::PortionWeightNumericTextInput"
      VALUE: "200"
    label: "Enter the weight of a portion"

- runFlow:
    file: "../../../../waitForKeyboardDismiss.yaml"
    label: "Wait for numeric keyboard to dismiss"

- runFlow:
    file: ../cleanAndResume.yaml
    label: "Delete nutrition image from gallery and return to Recipedia"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::PrefixText"
    direction: UP
    speed: 30
    centerElement: true
    label: "Scroll to up back to preparation section"
