appId: "com.recipedia"
---
- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipePreparation::OpenModal::RoundButton"
    direction: DOWN
    speed: 30
    centerElement: true

- waitForAnimationToEnd

- tapOn:
    id: "RecipePreparation::OpenModal::RoundButton"
    label: "Tap on OCR button of recipe preparation"

- runFlow:
    file: ../android/addMedia.yaml
    env:
      FIELD_NAME: preparation
    when:
      platform: Android
- runFlow:
    file: ../iOS/addMedia.yaml
    env:
      FIELD_NAME: preparation
    when:
      platform: iOS

- runFlow:
    file: ../android/selectMostRecentFromModal.yaml
    label: "Select preparation from modal for OCR"
    when:
      platform: Android
- runFlow:
    file: ../iOS/selectMostRecentFromModal.yaml
    label: "Select preparation from modal for OCR"
    when:
      platform: iOS

- extendedWaitUntil:
    visible:
      id: "RecipePreparation::EditableStep::0::Step"
    timeout: 60000
    label: "Wait for first preparation step to be populated by OCR"

- runFlow:
    file: ../cleanAndResume.yaml
    label: "Delete preparation image from gallery and return to Recipedia"
