appId: "com.recipedia"
---
- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeTags::OpenModal::RoundButton"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to tags section"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeTags::OpenModal::RoundButton"
    label: "Tap on OCR button of recipe tags"

- runFlow:
    file: ../android/addMedia.yaml
    env:
      FIELD_NAME: tags
    when:
      platform: Android
- runFlow:
    file: ../iOS/addMedia.yaml
    env:
      FIELD_NAME: tags
    when:
      platform: iOS

- runFlow:
    file: ../android/selectMostRecentFromModal.yaml
    label: "Select tags from modal for OCR"
    when:
      platform: Android
- runFlow:
    file: ../iOS/selectMostRecentFromModal.yaml
    label: "Select tags from modal for OCR"
    when:
      platform: iOS

- extendedWaitUntil:
    visible:
      id: "RecipeValidation::ValidationQueue::Tag::SimilarityDialog::Title"
    timeout: 120000
    label: "Wait for validation queue for tags to be displayed"

- runFlow:
    file: "../../../validation/validateAllTags.yaml"
    env:
      PREFIX: "RecipeValidation"
    label: "Validate all tags from OCR"

- extendedWaitUntil:
    visible:
      id: "RecipeTags::0::Chip"
    timeout: 30000
    label: "Wait for first tag to be populated by OCR"

- runFlow:
    file: ../cleanAndResume.yaml
    label: "Delete tags image from gallery and return to Recipedia"
